# empacotador

./: .env.example  .gitignore  README.md  fetch_data.py  pyproject.toml
datasets/camara/agenda/: query.sql  tableschema.json
datasets/camara/assiduidade-dos-vereadores/: query.sql  tableschema.json
datasets/camara/leis/: table-schema.json
datasets/diarios-oficiais/: query.sql  tableschema.json
datasets/prefeitura/licitacoes/: query.sql  tableschema.json
